--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-notebook==6.4.12
-jupyterlab==3.4.4
-matplotlib==3.5.2
+notebook==7.0.0
+jupyterlab==4.0.3
+matplotlib==3.7.2
 tabulate==0.8.10
-pandas==1.4.3
+pandas==2.0.3
 pycoingecko==2.2.0
-jupyter-contrib-nbextensions==0.5.1
+jupyter-contrib-nbextensions==0.7.0
 python-dotenv
-web3==5.31.1
-gql[requests]==3.1.0
-pyarrow==9.0.0
-seaborn==0.12.1
+web3
+gql[requests]==3.4.1
+seaborn==0.12.2
+
